Доработал для лучшей совместимости с docker

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ public/uploads/*
 logs/*
 shopping-lists-and-recipes
 __debug_bin
+postgres-data
+.env
+.dockerignore
+docker-compose.yml
+Dockerfile
