--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/app/main.go"
+            "program": "${workspaceFolder}/cmd/app/main.go",
+            "env": {},
+            "args": ["-clean"]
         }
     ]
 }
