--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ shopping-lists-and-recipes
 __debug_bin
 postgres-data
 .env
-.vscode
+.vscode/
+.vscode/*
 ##.dockerignore
 ##docker-compose.yml
 ##Dockerfile
